--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>CSS SHAPE</title>
+		<title>CSS SHAPES</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
