--- a/index.html
+++ b/index.html
@@ -8,33 +8,29 @@
 
 <body>
 	<center>
-	<!---square Shape--->
+	<!---Square--->
 	<div class="square"></div>
 	<br>
-	<!---circle Shape--->
+	<!---Circle--->
 	<div class="circle"></div>
 	<br>
-	<!---rectangle Shape--->
+	<!---Rectangle--->
 	<div class="rectangle"></div>
 	<br>
-	<!---oval Shape--->
+	<!---Oval--->
 	<div class="oval"></div>
 	<br>
-	<!---Triangle Top Left Shape--->
+	<!---Triangle Top Left--->
 	<div class="toplefttriangle"></div>
 	<br>
-	<!---Triangle Top Right Shape--->
+	<!---Triangle Top Right--->
 	<div class="toprighttriangle"></div>
 	<br>
-	<!---Triangle Up Shape--->
+	<!---Triangle Up--->
 	<div class="uptriangle"></div>
 	<br>
-	<!---Triangle Down Shape--->
+	<!---Triangle Down--->
 	<div class="downtriangle"></div>
 	<br>
-	
-	
 	</center>
-	
-
-	
+</body>
